lib_LTLIBRARIES = 

if ENABLE_MPFR
lib_LTLIBRARIES += libmplapack_mpfr.la
endif

if ENABLE_GMP
lib_LTLIBRARIES += libmplapack_gmp.la
endif

if ENABLE_DD
lib_LTLIBRARIES += libmplapack_dd.la
endif

if ENABLE_QD
lib_LTLIBRARIES += libmplapack_qd.la
endif

if ENABLE_DOUBLE
lib_LTLIBRARIES += libmplapack_double.la
endif

if ENABLE__FLOAT64X
lib_LTLIBRARIES += libmplapack__Float64x.la
endif

if ENABLE__FLOAT128
lib_LTLIBRARIES += libmplapack__Float128.la
endif

if ENABLE_GMP
libmplapack_gmp_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_GMP___
libmplapack_gmp_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_gmp_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_MPFR
libmplapack_mpfr_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -I$(MPFR_INCLUDEDIR)  -I$(MPC_INCLUDEDIR) -I$(top_srcdir)/mpfrc++ -D___MPLAPACK_BUILD_WITH_MPFR___
libmplapack_mpfr_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_mpfr_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_QD
libmplapack_qd_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(QD_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_QD___
libmplapack_qd_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_qd_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_DD
libmplapack_dd_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(QD_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_DD___
libmplapack_dd_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_dd_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_DOUBLE
libmplapack_double_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH_DOUBLE___
libmplapack_double_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_double_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE__FLOAT64X
libmplapack__Float64x_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH__FLOAT64X___
libmplapack__Float64x_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack__Float64x_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE__FLOAT128
libmplapack__Float128_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH__FLOAT128___
libmplapack__Float128_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack__Float128_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

# Cdrscl.cpp - iMlazlr.cpp converted by fable + script. build fine with MPFR. 359 files
# Cbdsqr.cpp - iMlaenv.cpp by fable + script + small fix by hand. 
# Clangb.cpp - iMlaslr.cpp not yet
MPLAPACK_SOURCES_AUTO = \
Cdrscl.cpp \
Cgbsv.cpp \
Cgbtf2.cpp \
Cgbtrs.cpp \
Cgebak.cpp \
Cgehrd.cpp \
Cgelq.cpp \
Cgelqf.cpp \
Cgelqt.cpp \
Cgemlqt.cpp \
Cgemqrt.cpp \
Cgeqlf.cpp \
Cgeqr.cpp \
Cgeqrf.cpp \
Cgeqrfp.cpp \
Cgeqrt.cpp \
Cgerqf.cpp \
Cgesv.cpp \
Cgetc2.cpp \
Cgetf2.cpp \
Cgetrf.cpp \
Cgetrf2.cpp \
Cgetri.cpp \
Cgetrs.cpp \
Cgetsqrhrt.cpp \
Cgttrs.cpp \
Cgtts2.cpp \
Chegst.cpp \
Chesv.cpp \
Chesv_rook.cpp \
Chesvx.cpp \
Cheswapr.cpp \
Chetrf.cpp \
Chetrf_aa.cpp \
Chetrf_rk.cpp \
Chetrf_rook.cpp \
Chetri.cpp \
Chetri2.cpp \
Chetri_3.cpp \
Chetri_rook.cpp \
Chetrs.cpp \
Chetrs2.cpp \
Chetrs_3.cpp \
Chetrs_aa.cpp \
Chetrs_rook.cpp \
Chfrk.cpp \
Chpsv.cpp \
Chpsvx.cpp \
Cla_wwaddw.cpp \
Clacgv.cpp \
Clacp2.cpp \
Clacpy.cpp \
Clacrt.cpp \
Cladiv.cpp \
Clagtm.cpp \
Clangt.cpp \
Clanht.cpp \
Clapmr.cpp \
Clapmt.cpp \
Claqgb.cpp \
Claqge.cpp \
Claqhb.cpp \
Claqhe.cpp \
Claqhp.cpp \
Claqsb.cpp \
Claqsp.cpp \
Claqsy.cpp \
Clar2v.cpp \
Clarf.cpp \
Clarfb_gett.cpp \
Clarfg.cpp \
Clarft.cpp \
Clarfx.cpp \
Clarfy.cpp \
Clarscl2.cpp \
Clartv.cpp \
Clarz.cpp \
Clarzt.cpp \
Clascl.cpp \
Clascl2.cpp \
Claset.cpp \
Clasr.cpp \
Classq.cpp \
Claswlq.cpp \
Claswp.cpp \
Clatsqr.cpp \
Claunhr_col_getrfnp.cpp \
Clauum.cpp \
Cpbequ.cpp \
Cpbstf.cpp \
Cpbsv.cpp \
Cpbtf2.cpp \
Cpbtrs.cpp \
Cpoequ.cpp \
Cposv.cpp \
Cposvx.cpp \
Cpotrf.cpp \
Cpotrf2.cpp \
Cpotri.cpp \
Cpotrs.cpp \
Cppequ.cpp \
Cppsv.cpp \
Cppsvx.cpp \
Cpptrs.cpp \
Cptcon.cpp \
Cptsv.cpp \
Cptsvx.cpp \
Cpttrf.cpp \
Cpttrs.cpp \
Cptts2.cpp \
Crot.cpp \
Cspmv.cpp \
Cspr.cpp \
Cspsv.cpp \
Cspsvx.cpp \
Csyconv.cpp \
Csyconvf.cpp \
Csyconvf_rook.cpp \
Csymv.cpp \
Csyr.cpp \
Csysvx.cpp \
Csyswapr.cpp \
Csytrf.cpp \
Csytrf_aa.cpp \
Csytrf_rk.cpp \
Csytrf_rook.cpp \
Csytri.cpp \
Csytri2.cpp \
Csytri_3.cpp \
Csytri_rook.cpp \
Csytrs.cpp \
Csytrs2.cpp \
Csytrs_3.cpp \
Csytrs_aa.cpp \
Csytrs_rook.cpp \
Ctbtrs.cpp \
Ctgexc.cpp \
Ctgsja.cpp \
Ctplqt.cpp \
Ctpmlqt.cpp \
Ctpmqrt.cpp \
Ctpqrt.cpp \
Ctprfb.cpp \
Ctptrs.cpp \
Ctpttr.cpp \
Ctrexc.cpp \
Ctrti2.cpp \
Ctrtrs.cpp \
Ctrttp.cpp \
Ctzrzf.cpp \
Cunbdb5.cpp \
Cunbdb6.cpp \
Cunghr.cpp \
Cungl2.cpp \
Cunglq.cpp \
Cungql.cpp \
Cungqr.cpp \
Cungr2.cpp \
Cungrq.cpp \
Cungtr.cpp \
Cungtsqr.cpp \
Cunhr_col.cpp \
Cunm22.cpp \
Cunm2l.cpp \
Cunm2r.cpp \
Cunml2.cpp \
Cunmr2.cpp \
Cunmr3.cpp \
Cupgtr.cpp \
RCsum1.cpp \
Rcombssq.cpp \
Rgbsv.cpp \
Rgbtf2.cpp \
Rgbtrs.cpp \
Rgebak.cpp \
Rgehrd.cpp \
Rgelq.cpp \
Rgelqf.cpp \
Rgelqt.cpp \
Rgemlqt.cpp \
Rgemqrt.cpp \
Rgeqlf.cpp \
Rgeqr.cpp \
Rgeqrf.cpp \
Rgeqrfp.cpp \
Rgeqrt.cpp \
Rgerqf.cpp \
Rgesv.cpp \
Rgetc2.cpp \
Rgetf2.cpp \
Rgetrf.cpp \
Rgetrf2.cpp \
Rgetri.cpp \
Rgetrs.cpp \
Rgetsqrhrt.cpp \
Rgtsv.cpp \
Rgttrf.cpp \
Rgttrs.cpp \
Rgtts2.cpp \
Risnan.cpp \
Rla_gbrpvgrw.cpp \
Rla_gerpvgrw.cpp \
Rla_wwaddw.cpp \
Rlacpy.cpp \
Rlae2.cpp \
Rlaed5.cpp \
Rlaev2.cpp \
Rlagtf.cpp \
Rlagtm.cpp \
Rlaic1.cpp \
Rlaisnan.cpp \
Rlamrg.cpp \
Rlaneg.cpp \
Rlangt.cpp \
Rlanst.cpp \
Rlaorhr_col_getrfnp.cpp \
Rlapmr.cpp \
Rlapmt.cpp \
Rlapy2.cpp \
Rlaqgb.cpp \
Rlaqge.cpp \
Rlaqr1.cpp \
Rlaqsb.cpp \
Rlaqsp.cpp \
Rlaqsy.cpp \
Rlar1v.cpp \
Rlar2v.cpp \
Rlarf.cpp \
Rlarfb_gett.cpp \
Rlarfg.cpp \
Rlarfgp.cpp \
Rlarft.cpp \
Rlarfx.cpp \
Rlarfy.cpp \
Rlargv.cpp \
Rlarra.cpp \
Rlarrc.cpp \
Rlarrr.cpp \
Rlarscl2.cpp \
Rlartv.cpp \
Rlarz.cpp \
Rlarzt.cpp \
Rlas2.cpp \
Rlascl.cpp \
Rlascl2.cpp \
Rlasd0.cpp \
Rlasd1.cpp \
Rlasd5.cpp \
Rlaset.cpp \
Rlasq4.cpp \
Rlasr.cpp \
Rlassq.cpp \
Rlasv2.cpp \
Rlaswlq.cpp \
Rlaswp.cpp \
Rlasyf.cpp \
Rlasyf_aa.cpp \
Rlasyf_rk.cpp \
Rlasyf_rook.cpp \
Rlatsqr.cpp \
Rlauu2.cpp \
Rlauum.cpp \
Ropgtr.cpp \
Rorbdb5.cpp \
Rorbdb6.cpp \
Rorgbr.cpp \
Rorghr.cpp \
Rorglq.cpp \
Rorgql.cpp \
Rorgqr.cpp \
Rorgrq.cpp \
Rorgtr.cpp \
Rorhr_col.cpp \
Rpbequ.cpp \
Rpbstf.cpp \
Rpbsv.cpp \
Rpbtf2.cpp \
Rpbtrs.cpp \
Rpoequ.cpp \
Rposv.cpp \
Rposvx.cpp \
Rpotf2.cpp \
Rpotrf.cpp \
Rpotrf2.cpp \
Rpotri.cpp \
Rpotrs.cpp \
Rppequ.cpp \
Rppsv.cpp \
Rppsvx.cpp \
Rpptrs.cpp \
Rptcon.cpp \
Rptsv.cpp \
Rptsvx.cpp \
Rpttrf.cpp \
Rpttrs.cpp \
Rptts2.cpp \
Rrscl.cpp \
Rsbev.cpp \
Rsbevd.cpp \
Rsfrk.cpp \
Rspev.cpp \
Rspevd.cpp \
Rspsv.cpp \
Rspsvx.cpp \
Rstev.cpp \
Rstevd.cpp \
Rsyconv.cpp \
Rsyconvf.cpp \
Rsyconvf_rook.cpp \
Rsyev.cpp \
Rsyevd.cpp \
Rsygs2.cpp \
Rsygst.cpp \
Rsysv.cpp \
Rsysv_rk.cpp \
Rsysv_rook.cpp \
Rsysvx.cpp \
Rsyswapr.cpp \
Rsytf2.cpp \
Rsytf2_rk.cpp \
Rsytf2_rook.cpp \
Rsytrd.cpp \
Rsytrf.cpp \
Rsytrf_aa.cpp \
Rsytrf_rk.cpp \
Rsytrf_rook.cpp \
Rsytri.cpp \
Rsytri2.cpp \
Rsytri_3.cpp \
Rsytri_rook.cpp \
Rsytrs.cpp \
Rsytrs2.cpp \
Rsytrs_3.cpp \
Rsytrs_aa.cpp \
Rsytrs_rook.cpp \
Rtbtrs.cpp \
Rtgexc.cpp \
Rtgsja.cpp \
Rtplqt.cpp \
Rtpmlqt.cpp \
Rtpmqrt.cpp \
Rtpqrt.cpp \
Rtprfb.cpp \
Rtptrs.cpp \
Rtpttr.cpp \
Rtrexc.cpp \
Rtrti2.cpp \
Rtrtrs.cpp \
Rtrttp.cpp \
Rtzrzf.cpp \
iCmax1.cpp \
iMladiag.cpp \
iMladlc.cpp \
iMladlr.cpp \
iMlaprec.cpp \
iMlatrans.cpp \
iMlauplo.cpp \
iMlazlc.cpp \
iMlazlr.cpp

MPLAPACK_SOURCES_HAND=\
Cbdsqr.cpp \
Cgbtrf.cpp \
Cgebal.cpp \
Cgebd2.cpp \
Cgebrd.cpp \
Cgees.cpp \
Cgeev.cpp \
Cgehd2.cpp \
Cgelq2.cpp \
Cgelqt3.cpp \
Cgeql2.cpp \
Cgeqr2.cpp \
Cgeqr2p.cpp \
Cgeqrt2.cpp \
Cgeqrt3.cpp \
Cgerq2.cpp \
Cgesvd.cpp \
Cggbak.cpp \
Cgtsv.cpp \
Chbev.cpp \
Chbtrd.cpp \
Cheev.cpp \
Chegs2.cpp \
Chetd2.cpp \
Chetf2.cpp \
Chetf2_rk.cpp \
Chetf2_rook.cpp \
Chetrd.cpp \
Chetri2x.cpp \
Chetri_3x.cpp \
Chpev.cpp \
Chptrd.cpp \
Chptrf.cpp \
Chptrs.cpp \
Chseqr.cpp \
Clabrd.cpp \
Clacn2.cpp \
Clacrm.cpp \
Claesy.cpp \
Claev2.cpp \
Clahef.cpp \
Clahef_rk.cpp \
Clahef_rook.cpp \
Clahqr.cpp \
Clahr2.cpp \
Clamswlq.cpp \
Clamtsqr.cpp \
Clange.cpp \
Clanhb.cpp \
Clanhe.cpp \
Clanhp.cpp \
Clansy.cpp \
Claqr0.cpp \
Claqr1.cpp \
Claqr2.cpp \
Claqr3.cpp \
Claqr4.cpp \
Claqr5.cpp \
Clar1v.cpp \
Clarfb.cpp \
Clarfgp.cpp \
Clargv.cpp \
Clartg.cpp \
Clarzb.cpp \
Clasyf.cpp \
Clasyf_rk.cpp \
Clasyf_rook.cpp \
Clatrd.cpp \
Clatrs.cpp \
Clatrz.cpp \
Claunhr_col_getrfnp2.cpp \
Clauu2.cpp \
Cpbtrf.cpp \
Cpotf2.cpp \
Cpptrf.cpp \
Csptrf.cpp \
Csptrs.cpp \
Csteqr.cpp \
Csytf2.cpp \
Csytf2_rk.cpp \
Csytf2_rook.cpp \
Csytri2x.cpp \
Csytri_3x.cpp \
Ctgex2.cpp \
Ctplqt2.cpp \
Ctpqrt2.cpp \
Ctrevc3.cpp \
Ctrsen.cpp \
Ctrsyl.cpp \
Ctrtri.cpp \
Cung2l.cpp \
Cung2r.cpp \
Cungbr.cpp \
Cunmbr.cpp \
Cunmhr.cpp \
Cunmlq.cpp \
Cunmqr.cpp \
Mutils.cpp \
Rbbcsd.cpp \
Rbdsdc.cpp \
Rbdsqr.cpp \
Rbdsvdx.cpp \
Rdisna.cpp \
Rgbbrd.cpp \
Rgbcon.cpp \
Rgbequ.cpp \
Rgbequb.cpp \
Rgbrfs.cpp \
Rgbsvx.cpp \
Rgbtrf.cpp \
Rgebal.cpp \
Rgebd2.cpp \
Rgebrd.cpp \
Rgecon.cpp \
Rgeequ.cpp \
Rgeequb.cpp \
Rgees.cpp \
Rgeesx.cpp \
Rgeev.cpp \
Rgeevx.cpp \
Rgehd2.cpp \
Rgejsv.cpp \
Rgelq2.cpp \
Rgelqt3.cpp \
Rgels.cpp \
Rgelsd.cpp \
Rgelss.cpp \
Rgelsy.cpp \
Rgemlq.cpp \
Rgemqr.cpp \
Rgeql2.cpp \
Rgeqp3.cpp \
Rgeqr2.cpp \
Rgeqr2p.cpp \
Rgeqrt2.cpp \
Rgeqrt3.cpp \
Rgerfs.cpp \
Rgerq2.cpp \
Rgesc2.cpp \
Rgesdd.cpp \
Rgesvd.cpp \
Rgesvdq.cpp \
Rgesvj.cpp \
Rgesvx.cpp \
Rgetsls.cpp \
Rggbak.cpp \
Rggbal.cpp \
Rgges.cpp \
Rgges3.cpp \
Rggev.cpp \
Rggev3.cpp \
Rggglm.cpp \
Rgghd3.cpp \
Rgghrd.cpp \
Rgglse.cpp \
Rggqrf.cpp \
Rggrqf.cpp \
Rggsvd3.cpp \
Rggsvp3.cpp \
Rgsvj0.cpp \
Rgsvj1.cpp \
Rgtcon.cpp \
Rgtrfs.cpp \
Rhseqr.cpp \
Rlabad.cpp \
Rlabrd.cpp \
Rlacn2.cpp \
Rladiv.cpp \
Rlaed0.cpp \
Rlaed1.cpp \
Rlaed2.cpp \
Rlaed3.cpp \
Rlaed4.cpp \
Rlaed6.cpp \
Rlaed7.cpp \
Rlaed8.cpp \
Rlaed9.cpp \
Rlaeda.cpp \
Rlaexc.cpp \
Rlag2.cpp \
Rlags2.cpp \
Rlagts.cpp \
Rlagv2.cpp \
Rlahqr.cpp \
Rlahr2.cpp \
Rlaln2.cpp \
Rlals0.cpp \
Rlalsd.cpp \
Rlamch.cpp \
Rlamswlq.cpp \
Rlamtsqr.cpp \
Rlangb.cpp \
Rlange.cpp \
Rlansb.cpp \
Rlansp.cpp \
Rlansy.cpp \
Rlantb.cpp \
Rlantr.cpp \
Rlanv2.cpp \
Rlaorhr_col_getrfnp2.cpp \
Rlapll.cpp \
Rlapy3.cpp \
Rlaqp2.cpp \
Rlaqps.cpp \
Rlaqr0.cpp \
Rlaqr2.cpp \
Rlaqr3.cpp \
Rlaqr4.cpp \
Rlaqr5.cpp \
Rlaqtr.cpp \
Rlarfb.cpp \
Rlarrj.cpp \
Rlartg.cpp \
Rlartgp.cpp \
Rlartgs.cpp \
Rlarzb.cpp \
Rlasd2.cpp \
Rlasd3.cpp \
Rlasd4.cpp \
Rlasd6.cpp \
Rlasd7.cpp \
Rlasd8.cpp \
Rlasda.cpp \
Rlasdq.cpp \
Rlasdt.cpp \
Rlasq1.cpp \
Rlasq2.cpp \
Rlasq3.cpp \
Rlasq5.cpp \
Rlasq6.cpp \
Rlasrt.cpp \
Rlasy2.cpp \
Rlatbs.cpp \
Rlatdf.cpp \
Rlatrd.cpp \
Rlatrs.cpp \
Rlatrz.cpp \
Rorg2l.cpp \
Rorg2r.cpp \
Rorgl2.cpp \
Rorgr2.cpp \
Rorm22.cpp \
Rorm2l.cpp \
Rorm2r.cpp \
Rormbr.cpp \
Rormhr.cpp \
Rorml2.cpp \
Rormlq.cpp \
Rormql.cpp \
Rormqr.cpp \
Rormr2.cpp \
Rormr3.cpp \
Rormrq.cpp \
Rormrz.cpp \
Rormtr.cpp \
Rpbtrf.cpp \
Rpocon.cpp \
Rpoequb.cpp \
Rporfs.cpp \
Rpptrf.cpp \
Rptrfs.cpp \
Rsbtrd.cpp \
Rsptrd.cpp \
Rsptrf.cpp \
Rsptrs.cpp \
Rstedc.cpp \
Rsteqr.cpp \
Rsterf.cpp \
Rsycon.cpp \
Rsyequb.cpp \
Rsyrfs.cpp \
Rsysv_aa.cpp \
Rsysv_aa_2stage.cpp \
Rsytd2.cpp \
Rsytrf_aa_2stage.cpp \
Rsytri2x.cpp \
Rsytri_3x.cpp \
Rsytrs_aa_2stage.cpp \
Rtgex2.cpp \
Rtgsy2.cpp \
Rtgsyl.cpp \
Rtplqt2.cpp \
Rtpqrt2.cpp \
Rtrevc3.cpp \
Rtrsen.cpp \
Rtrsna.cpp \
Rtrsyl.cpp \
Rtrtri.cpp \
Clatps.cpp \
Cppcon.cpp \
Cpprfs.cpp \
Cpocon.cpp \
Cporfs.cpp \
Cherfs.cpp \
Chprfs.cpp \
Clahef_aa.cpp \
Chpcon.cpp \
Checon.cpp \
Cptrfs.cpp \
Rtgevc.cpp \
Rlanhs.cpp \
Rhgeqz.cpp \
Rtgsen.cpp \
Rsprfs.cpp \
Rspcon.cpp \
Ropmtr.cpp \
Rlatps.cpp \
Rppcon.cpp \
Rpprfs.cpp \
Clags2.cpp \
Clapll.cpp \
Csycon.cpp \
Csyrfs.cpp \
Clasyf_aa.cpp \
Clansp.cpp \
Cspcon.cpp \
Csprfs.cpp \
Rlaruv.cpp \
Rlarnv.cpp \
Clarnv.cpp \
Rlalsa.cpp \
iMparmq.cpp \
iMieeeck.cpp \
iMlaenv.cpp \
Clangb.cpp \
Clansb.cpp \
Mlsamen.cpp \
iMlaver.cpp \
Cbbcsd.cpp \
Cgbbrd.cpp \
Cgbcon.cpp \
Cgbequ.cpp \
Cgbequb.cpp \
Cgbrfs.cpp \
Cgbsvxx.cpp \
Cgecon.cpp \
Cgeequ.cpp \
Cgeequb.cpp \
Cgeesx.cpp \
Cgeevx.cpp \
Cgejsv.cpp \
Cgels.cpp \
Cgelsd.cpp \
Cgelss.cpp \
Cgbsvx.cpp \
Cgelsy.cpp \
Cgemlq.cpp \
Cgemqr.cpp \
Cgeqp3.cpp \
Cgerfs.cpp \
Cgesc2.cpp \
Cgesdd.cpp \
Cgesvdq.cpp \
Cgesvdx.cpp \
Cgesvj.cpp \
Rtftri.cpp \
Rtfttp.cpp \
Rtfttr.cpp \
Rtgsna.cpp \
Rtpcon.cpp \
Rtprfs.cpp \
Rtptri.cpp \
Rtpttf.cpp \
Rtrcon.cpp \
Rtrevc.cpp \
Rtrrfs.cpp

MPLAPACK_SOURCES_NOTYET= \
Clacon.cpp \
Ctbcon.cpp \
Ctbrfs.cpp \
Ctfsm.cpp \
Ctftri.cpp \
Ctfttp.cpp \
Ctfttr.cpp \
Ctgevc.cpp \
Ctgsen.cpp \
Ctgsna.cpp \
Ctgsy2.cpp \
Ctgsyl.cpp \
Ctpcon.cpp \
Ctprfs.cpp \
Ctptri.cpp \
Ctpttf.cpp \
Ctrcon.cpp \
Ctrevc.cpp \
Ctrrfs.cpp \
Ctrsna.cpp \
Ctrttf.cpp \
Cunbdb.cpp \
Cunbdb1.cpp \
Cunbdb2.cpp \
Cunbdb3.cpp \
Cunbdb4.cpp \
Cuncsd.cpp \
Cunmql.cpp \
Cunmrq.cpp \
Cunmrz.cpp \
Cunmtr.cpp \
Cupmtr.cpp \
Rtbcon.cpp \
Rtbrfs.cpp \
Rsbgst.cpp \
Rtfsm.cpp \
Rtrttf.cpp \
Rsbgv.cpp \
Rpbcon.cpp \
Rpbrfs.cpp \
Rpbsvx.cpp \
Rpftrf.cpp \
Rpftri.cpp \
Rpftrs.cpp \
Claed0.cpp \
Claed7.cpp \
Claed8.cpp \
Claein.cpp \
Clag2c.cpp \
Claic1.cpp \
Clals0.cpp \
Clalsa.cpp \
Clalsd.cpp \
Clangb.cpp \
Clanhf.cpp \
Clanhs.cpp \
Clansb.cpp \
Clantb.cpp \
Clantp.cpp \
Clantr.cpp \
Claqp2.cpp \
Claqps.cpp \
Clarcm.cpp \
Clarrv.cpp \
Clat2c.cpp \
Clatbs.cpp \
Clatdf.cpp \
Cpbcon.cpp \
Cpbrfs.cpp \
Cpbsvx.cpp \
Cpftrf.cpp \
Cpftri.cpp \
Cpftrs.cpp \
Cpoequb.cpp \
Cporfsx.cpp \
Cposvxx.cpp \
Cpptri.cpp \
Cpstf2.cpp \
Cpstrf.cpp \
Cpteqr.cpp \
Csptri.cpp \
Cstedc.cpp \
Cstegr.cpp \
Cstein.cpp \
Cstemr.cpp \
Cgesvx.cpp \
Cgesvxx.cpp \
Cgetsls.cpp \
Cggbal.cpp \
Cgges.cpp \
Cgges3.cpp \
Cggesx.cpp \
Cggev.cpp \
Cggev3.cpp \
Cggevx.cpp \
Cggglm.cpp \
Cgghd3.cpp \
Cgghrd.cpp \
Cgglse.cpp \
Cggqrf.cpp \
Cggrqf.cpp \
Cggsvd3.cpp \
Cgsvj0.cpp \
Cgsvj1.cpp \
Cgtcon.cpp \
Cgtrfs.cpp \
Cgtsvx.cpp \
Cgttrf.cpp \
Chb2st_kernels.cpp \
Chbev_2stage.cpp \
Chbevd.cpp \
Chbevd_2stage.cpp \
Chbevx.cpp \
Chbevx_2stage.cpp \
Chbgst.cpp \
Chbgv.cpp \
Chbgvd.cpp \
Chbgvx.cpp \
Checon_3.cpp \
Checon_rook.cpp \
Cheequb.cpp \
Cheev_2stage.cpp \
Cheevd.cpp \
Cheevd_2stage.cpp \
Cheevr.cpp \
Cheevr_2stage.cpp \
Cheevx.cpp \
Cheevx_2stage.cpp \
Chegv.cpp \
Chegv_2stage.cpp \
Chegvd.cpp \
Chegvx.cpp \
Cherfsx.cpp \
Chesv_aa.cpp \
Chesv_aa_2stage.cpp \
Chesv_rk.cpp \
Chesvxx.cpp \
Chetrd_2stage.cpp \
Chetrd_he2hb.cpp \
Chetrf_aa_2stage.cpp \
Chetrs_aa_2stage.cpp \
Chgeqz.cpp \
Chpevd.cpp \
Chpevx.cpp \
Chpgst.cpp \
Chpgv.cpp \
Chpgvd.cpp \
Chpgvx.cpp \
Chptri.cpp \
Chsein.cpp \
Cla_gbamv.cpp \
Cla_gbrcond_c.cpp \
Cla_gbrcond_x.cpp \
Cla_gbrfsx_extended.cpp \
Cla_gbrpvgrw.cpp \
Cla_geamv.cpp \
Cla_gercond_c.cpp \
Cla_gercond_x.cpp \
Cla_gerfsx_extended.cpp \
Cla_gerpvgrw.cpp \
Cla_heamv.cpp \
Cla_hercond_c.cpp \
Cla_hercond_x.cpp \
Cla_herfsx_extended.cpp \
Cla_herpvgrw.cpp \
Cla_lin_berr.cpp \
Cla_porcond_c.cpp \
Cla_porcond_x.cpp \
Cla_porfsx_extended.cpp \
Cla_porpvgrw.cpp \
Cla_syamv.cpp \
Cla_syrcond_c.cpp \
Cla_syrcond_x.cpp \
Cla_syrfsx_extended.cpp \
Cla_syrpvgrw.cpp \
Csycon_3.cpp \
Csycon_rook.cpp \
Csyequb.cpp \
Csyrfsx.cpp \
Csysv.cpp \
Csysv_aa.cpp \
Csysv_aa_2stage.cpp \
Csysv_rk.cpp \
Csysv_rook.cpp \
Csysvxx.cpp \
Csytrf_aa_2stage.cpp \
Csytrs_aa_2stage.cpp \
Cuncsd2by1.cpp \
Cungtsqr_row.cpp \
Rgbrfsx.cpp \
Rgbsvxx.cpp \
Rgerfsx.cpp \
Rgesvdx.cpp \
Rgesvxx.cpp \
Rggesx.cpp \
Rggevx.cpp \
Rgtsvx.cpp \
Rhsein.cpp \
Rla_gbamv.cpp \
Rla_gbrcond.cpp \
Rla_gbrfsx_extended.cpp \
Rla_geamv.cpp \
Rla_gercond.cpp \
Rla_gerfsx_extended.cpp \
Rla_lin_berr.cpp \
Rla_porcond.cpp \
Rla_porfsx_extended.cpp \
Rla_porpvgrw.cpp \
Rla_syamv.cpp \
Rla_syrcond.cpp \
Rla_syrfsx_extended.cpp \
Rla_syrpvgrw.cpp \
Rlacon.cpp \
Rlaebz.cpp \
Rlaein.cpp \
Rlag2s.cpp \
Rlansf.cpp \
Rlantp.cpp \
Rlarrb.cpp \
Rlarrd.cpp \
Rlarre.cpp \
Rlarrf.cpp \
Rlarrk.cpp \
Rlarrv.cpp \
Rlat2s.cpp \
Rorbdb.cpp \
Rorbdb1.cpp \
Rorbdb2.cpp \
Rorbdb3.cpp \
Rorbdb4.cpp \
Rorcsd.cpp \
Rorcsd2by1.cpp \
Rorgtsqr.cpp \
Rorgtsqr_row.cpp \
Rporfsx.cpp \
Rposvxx.cpp \
Rpptri.cpp \
Rpstf2.cpp \
Rpstrf.cpp \
Rpteqr.cpp \
Rsb2st_kernels.cpp \
Rsbev_2stage.cpp \
Rsbevd_2stage.cpp \
Rsbevx.cpp \
Rsbevx_2stage.cpp \
Rsbgvd.cpp \
Rsbgvx.cpp \
Rsgesv.cpp \
Rspevx.cpp \
Rspgst.cpp \
Rspgv.cpp \
Rspgvd.cpp \
Rspgvx.cpp \
Rsposv.cpp \
Rsptri.cpp \
Rstebz.cpp \
Rstegr.cpp \
Rstein.cpp \
Rstemr.cpp \
Rstevr.cpp \
Rstevx.cpp \
Rsycon_3.cpp \
Rsycon_rook.cpp \
Rsyev_2stage.cpp \
Rsyevd_2stage.cpp \
Rsyevr.cpp \
Rsyevr_2stage.cpp \
Rsyevx.cpp \
Rsyevx_2stage.cpp \
Rsygv.cpp \
Rsygv_2stage.cpp \
Rsygvd.cpp \
Rsygvx.cpp \
Rsyrfsx.cpp \
Rsysvxx.cpp \
Rsytrd_2stage.cpp \
Rsytrd_sy2sb.cpp \
iMlaclc.cpp \
iMlaclr.cpp \
iMlaenv2stage.cpp \
iMlaslc.cpp \
iMlaslr.cpp 

MPLAPACK_SOURCES = $(MPLAPACK_SOURCES_NOTYET) # $(MPLAPACK_SOURCES_AUTO) $(MPLAPACK_SOURCES_HAND) 
