lib_LTLIBRARIES = 

if ENABLE_MPFR
lib_LTLIBRARIES += libmplapack_mpfr.la
endif

if ENABLE_GMP
lib_LTLIBRARIES += libmplapack_gmp.la
endif

if ENABLE_DD
lib_LTLIBRARIES += libmplapack_dd.la
endif

if ENABLE_QD
lib_LTLIBRARIES += libmplapack_qd.la
endif

if ENABLE_DOUBLE
lib_LTLIBRARIES += libmplapack_double.la
endif

if ENABLE__FLOAT64X
lib_LTLIBRARIES += libmplapack__Float64x.la
endif

if ENABLE__FLOAT128
lib_LTLIBRARIES += libmplapack__Float128.la
endif

if ENABLE_GMP
libmplapack_gmp_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_GMP___
libmplapack_gmp_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_gmp_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_MPFR
libmplapack_mpfr_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -I$(MPFR_INCLUDEDIR)  -I$(MPC_INCLUDEDIR) -I$(top_srcdir)/mpfrc++ -D___MPLAPACK_BUILD_WITH_MPFR___
libmplapack_mpfr_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_mpfr_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_QD
libmplapack_qd_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(QD_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_QD___
libmplapack_qd_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_qd_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_DD
libmplapack_dd_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(QD_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_DD___
libmplapack_dd_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_dd_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_DOUBLE
libmplapack_double_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH_DOUBLE___
libmplapack_double_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_double_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE__FLOAT64X
libmplapack__Float64x_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH__FLOAT64X___
libmplapack__Float64x_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack__Float64x_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE__FLOAT128
libmplapack__Float128_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH__FLOAT128___
libmplapack__Float128_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack__Float128_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif


MPLAPACK_SOURCES = \
Cgtcon.cpp \
Cgttrf.cpp \
Cbbcsd.cpp \
Cbdsqr.cpp \
Cdrscl.cpp \
Cgbbrd.cpp \
Cgbcon.cpp \
Cgbequ.cpp \
Cgbequb.cpp \
Cgbrfs.cpp \
Cgbsv.cpp \
Cgbsvx.cpp \
Cgbtf2.cpp \
Cgbtrf.cpp \
Cgbtrs.cpp \
Cgebak.cpp \
Cgebal.cpp \
Cgebd2.cpp \
Cgebrd.cpp \
Cgecon.cpp \
Cgeequ.cpp \
Cgeequb.cpp \
Cgees.cpp \
Cgeesx.cpp \
Cgeev.cpp \
Cgeevx.cpp \
Cgehd2.cpp \
Cgehrd.cpp \
Cgejsv.cpp \
Cgelq.cpp \
Cgelq2.cpp \
Cgelqf.cpp \
Cgelqt.cpp \
Cgelqt3.cpp \
Cgels.cpp \
Cgelsd.cpp \
Cgelss.cpp \
Cgelsy.cpp \
Cgemlq.cpp \
Cgemlqt.cpp \
Cgemqr.cpp \
Cgemqrt.cpp \
Cgeql2.cpp \
Cgeqlf.cpp \
Cgeqp3.cpp \
Cgeqr.cpp \
Cgeqr2.cpp \
Cgeqr2p.cpp \
Cgeqrf.cpp \
Cgeqrfp.cpp \
Cgeqrt.cpp \
Cgeqrt2.cpp \
Cgeqrt3.cpp \
Cgerfs.cpp \
Cgerq2.cpp \
Cgerqf.cpp \
Cgesc2.cpp \
Cgesdd.cpp \
Cgesv.cpp \
Cgesvd.cpp \
Cgesvdq.cpp \
Cgesvdx.cpp \
Cgesvj.cpp \
Cgesvx.cpp \
Cgetc2.cpp \
Cgetf2.cpp \
Cgetrf.cpp \
Cgetrf2.cpp \
Cgetri.cpp \
Cgetrs.cpp \
Cgetsls.cpp \
Cgetsqrhrt.cpp \
Cggbak.cpp \
Cggbal.cpp \
Cgges.cpp \
Cgges3.cpp \
Cggesx.cpp \
Cggev.cpp \
Cggev3.cpp \
Cggevx.cpp \
Cggglm.cpp \
Cgghd3.cpp \
Cgghrd.cpp \
Cgglse.cpp \
Cggqrf.cpp \
Cggrqf.cpp \
Cggsvd3.cpp \
Cggsvp3.cpp \
Cgsvj0.cpp \
Cgsvj1.cpp \
Cgtrfs.cpp \
Cgtsv.cpp \
Cgttrs.cpp \
Cgtts2.cpp \
Chb2st_kernels.cpp \
Chbev.cpp \
Chbev_2stage.cpp \
Chbevd.cpp \
Chbevd_2stage.cpp \
Chbevx.cpp \
Chbevx_2stage.cpp \
Chbgst.cpp \
Chbgvd.cpp \
Chbgvx.cpp \
Chbtrd.cpp \
Checon.cpp \
Checon_3.cpp \
Checon_rook.cpp \
Cheequb.cpp \
Cheev.cpp \
Cheev_2stage.cpp \
Cheevd.cpp \
Cheevd_2stage.cpp \
Cheevr.cpp \
Cheevr_2stage.cpp \
Cheevx.cpp \
Cheevx_2stage.cpp \
Chegs2.cpp \
Chegst.cpp \
Chegv_2stage.cpp \
Chegvd.cpp \
Chegvx.cpp \
Cherfs.cpp \
Chesv.cpp \
Chesv_rook.cpp \
Chesvx.cpp \
Cheswapr.cpp \
Chetd2.cpp \
Chetf2.cpp \
Chetf2_rk.cpp \
Chetf2_rook.cpp \
Chetrd.cpp \
Chetrd_2stage.cpp \
Chetrd_hb2st.cpp \
Chetrd_he2hb.cpp \
Chetrf.cpp \
Chetrf_aa.cpp \
Chetrf_aa_2stage.cpp \
Chetrf_rk.cpp \
Chetrf_rook.cpp \
Chetri.cpp \
Chetri2.cpp \
Chetri2x.cpp \
Chetri_3.cpp \
Chetri_3x.cpp \
Chetri_rook.cpp \
Chetrs.cpp \
Chetrs2.cpp \
Chetrs_3.cpp \
Chetrs_aa.cpp \
Chetrs_aa_2stage.cpp \
Chetrs_rook.cpp \
Chfrk.cpp \
Chgeqz.cpp \
Chpcon.cpp \
Chpev.cpp \
Chpevd.cpp \
Chpevx.cpp \
Chpgst.cpp \
Chpgvd.cpp \
Chpgvx.cpp \
Chprfs.cpp \
Chpsv.cpp \
Chpsvx.cpp \
Chptrd.cpp \
Chptrf.cpp \
Chptri.cpp \
Chptrs.cpp \
Chsein.cpp \
Chseqr.cpp \
Clabrd.cpp \
Clacgv.cpp \
Clacn2.cpp \
Clacon.cpp \
Clacp2.cpp \
Clacpy.cpp \
Clacrm.cpp \
Clacrt.cpp \
Cladiv.cpp \
Claed0.cpp \
Claed7.cpp \
Claed8.cpp \
Claein.cpp \
Claesy.cpp \
Claev2.cpp \
Clags2.cpp \
Clagtm.cpp \
Clahef.cpp \
Clahef_aa.cpp \
Clahef_rk.cpp \
Clahef_rook.cpp \
Clahqr.cpp \
Clahr2.cpp \
Claic1.cpp \
Clals0.cpp \
Clalsa.cpp \
Clalsd.cpp \
Clamswlq.cpp \
Clamtsqr.cpp \
Clangb.cpp \
Clange.cpp \
Clangt.cpp \
Clanhb.cpp \
Clanhe.cpp \
Clanhf.cpp \
Clanhp.cpp \
Clanhs.cpp \
Clanht.cpp \
Clansb.cpp \
Clansp.cpp \
Clansy.cpp \
Clantb.cpp \
Clantp.cpp \
Clantr.cpp \
Clapll.cpp \
Clapmr.cpp \
Clapmt.cpp \
Claqgb.cpp \
Claqge.cpp \
Claqhb.cpp \
Claqhe.cpp \
Claqhp.cpp \
Claqp2.cpp \
Claqps.cpp \
Claqr0.cpp \
Claqr1.cpp \
Claqr2.cpp \
Claqr3.cpp \
Claqr4.cpp \
Claqr5.cpp \
Claqsb.cpp \
Claqsp.cpp \
Claqsy.cpp \
Clar1v.cpp \
Clar2v.cpp \
Clarcm.cpp \
Clarf.cpp \
Clarfb.cpp \
Clarfb_gett.cpp \
Clarfg.cpp \
Clarfgp.cpp \
Clarft.cpp \
Clarfx.cpp \
Clarfy.cpp \
Clargv.cpp \
Clarnv.cpp \
Clarrv.cpp \
Clarscl2.cpp \
Clartg.cpp \
Clartv.cpp \
Clarz.cpp \
Clarzb.cpp \
Clarzt.cpp \
Clascl.cpp \
Clascl2.cpp \
Claset.cpp \
Clasr.cpp \
Classq.cpp \
Claswlq.cpp \
Claswp.cpp \
Clasyf.cpp \
Clasyf_aa.cpp \
Clasyf_rk.cpp \
Clasyf_rook.cpp \
Clatbs.cpp \
Clatdf.cpp \
Clatps.cpp \
Clatrd.cpp \
Clatrs.cpp \
Clatrz.cpp \
Clatsqr.cpp \
Claunhr_col_getrfnp.cpp \
Claunhr_col_getrfnp2.cpp \
Clauu2.cpp \
Clauum.cpp \
Cpbcon.cpp \
Cpbequ.cpp \
Cpbrfs.cpp \
Cpbstf.cpp \
Cpbsv.cpp \
Cpbsvx.cpp \
Cpbtf2.cpp \
Cpbtrf.cpp \
Cpbtrs.cpp \
Cpftrf.cpp \
Cpftri.cpp \
Cpftrs.cpp \
Cpocon.cpp \
Cpoequ.cpp \
Cpoequb.cpp \
Cporfs.cpp \
Cposv.cpp \
Cposvx.cpp \
Cpotf2.cpp \
Cpotrf.cpp \
Cpotrf2.cpp \
Cpotri.cpp \
Cpotrs.cpp \
Cppcon.cpp \
Cppequ.cpp \
Cpprfs.cpp \
Cppsv.cpp \
Cppsvx.cpp \
Cpptrf.cpp \
Cpptrs.cpp \
Cpstf2.cpp \
Cpstrf.cpp \
Cptcon.cpp \
Cptrfs.cpp \
Cptsv.cpp \
Cptsvx.cpp \
Cpttrf.cpp \
Cpttrs.cpp \
Cptts2.cpp \
Crot.cpp \
Cspcon.cpp \
Cspmv.cpp \
Cspr.cpp \
Csprfs.cpp \
Cspsv.cpp \
Cspsvx.cpp \
Csptrf.cpp \
Csptri.cpp \
Csptrs.cpp \
Cstedc.cpp \
Cstein.cpp \
Cstemr.cpp \
Csteqr.cpp \
Csycon.cpp \
Csycon_3.cpp \
Csycon_rook.cpp \
Csyconv.cpp \
Csyconvf.cpp \
Csyconvf_rook.cpp \
Csyequb.cpp \
Csymv.cpp \
Csyr.cpp \
Csyrfs.cpp \
Csysvx.cpp \
Csyswapr.cpp \
Csytf2.cpp \
Csytf2_rk.cpp \
Csytf2_rook.cpp \
Csytrf.cpp \
Csytrf_aa.cpp \
Csytrf_aa_2stage.cpp \
Csytrf_rk.cpp \
Csytrf_rook.cpp \
Csytri.cpp \
Csytri2.cpp \
Csytri2x.cpp \
Csytri_3.cpp \
Csytri_3x.cpp \
Csytri_rook.cpp \
Csytrs.cpp \
Csytrs2.cpp \
Csytrs_3.cpp \
Csytrs_aa.cpp \
Csytrs_aa_2stage.cpp \
Csytrs_rook.cpp \
Ctbcon.cpp \
Ctbrfs.cpp \
Ctbtrs.cpp \
Ctfsm.cpp \
Ctftri.cpp \
Ctfttp.cpp \
Ctfttr.cpp \
Ctgevc.cpp \
Ctgex2.cpp \
Ctgexc.cpp \
Ctgsen.cpp \
Ctgsja.cpp \
Ctgsna.cpp \
Ctgsy2.cpp \
Ctgsyl.cpp \
Ctpcon.cpp \
Ctplqt.cpp \
Ctplqt2.cpp \
Ctpmlqt.cpp \
Ctpmqrt.cpp \
Ctpqrt.cpp \
Ctpqrt2.cpp \
Ctprfb.cpp \
Ctprfs.cpp \
Ctptri.cpp \
Ctptrs.cpp \
Ctpttf.cpp \
Ctpttr.cpp \
Ctrcon.cpp \
Ctrevc.cpp \
Ctrevc3.cpp \
Ctrexc.cpp \
Ctrrfs.cpp \
Ctrsen.cpp \
Ctrsna.cpp \
Ctrsyl.cpp \
Ctrti2.cpp \
Ctrtri.cpp \
Ctrtrs.cpp \
Ctrttf.cpp \
Ctrttp.cpp \
Ctzrzf.cpp \
Cunbdb.cpp \
Cunbdb1.cpp \
Cunbdb2.cpp \
Cunbdb3.cpp \
Cunbdb4.cpp \
Cunbdb5.cpp \
Cunbdb6.cpp \
Cuncsd.cpp \
Cuncsd2by1.cpp \
Cung2l.cpp \
Cung2r.cpp \
Cungbr.cpp \
Cunghr.cpp \
Cungl2.cpp \
Cunglq.cpp \
Cungql.cpp \
Cungqr.cpp \
Cungr2.cpp \
Cungrq.cpp \
Cungtr.cpp \
Cungtsqr.cpp \
Cungtsqr_row.cpp \
Cunhr_col.cpp \
Cunm22.cpp \
Cunm2l.cpp \
Cunm2r.cpp \
Cunmbr.cpp \
Cunmhr.cpp \
Cunml2.cpp \
Cunmlq.cpp \
Cunmql.cpp \
Cunmqr.cpp \
Cunmr2.cpp \
Cunmr3.cpp \
Cunmrq.cpp \
Cunmrz.cpp \
Cunmtr.cpp \
Cupgtr.cpp \
Cupmtr.cpp \
Mlsamen.cpp \
Mmaxloc.cpp \
Mmaxval.cpp \
Mutils.cpp \
RCsum1.cpp \
Rbbcsd.cpp \
Rbdsdc.cpp \
Rbdsqr.cpp \
Rbdsvdx.cpp \
Rcombssq.cpp \
Rdisna.cpp \
Rgbbrd.cpp \
Rgbcon.cpp \
Rgbequ.cpp \
Rgbequb.cpp \
Rgbrfs.cpp \
Rgbsv.cpp \
Rgbsvx.cpp \
Rgbtf2.cpp \
Rgbtrf.cpp \
Rgbtrs.cpp \
Rgebak.cpp \
Rgebal.cpp \
Rgebd2.cpp \
Rgebrd.cpp \
Rgecon.cpp \
Rgeequ.cpp \
Rgeequb.cpp \
Rgees.cpp \
Rgeesx.cpp \
Rgeev.cpp \
Rgeevx.cpp \
Rgehd2.cpp \
Rgehrd.cpp \
Rgejsv.cpp \
Rgelq.cpp \
Rgelq2.cpp \
Rgelqf.cpp \
Rgelqt.cpp \
Rgelqt3.cpp \
Rgels.cpp \
Rgelsd.cpp \
Rgelss.cpp \
Rgelsy.cpp \
Rgemlq.cpp \
Rgemlqt.cpp \
Rgemqr.cpp \
Rgemqrt.cpp \
Rgeql2.cpp \
Rgeqlf.cpp \
Rgeqp3.cpp \
Rgeqr.cpp \
Rgeqr2.cpp \
Rgeqr2p.cpp \
Rgeqrf.cpp \
Rgeqrfp.cpp \
Rgeqrt.cpp \
Rgeqrt2.cpp \
Rgeqrt3.cpp \
Rgerfs.cpp \
Rgerq2.cpp \
Rgerqf.cpp \
Rgesc2.cpp \
Rgesdd.cpp \
Rgesv.cpp \
Rgesvd.cpp \
Rgesvdq.cpp \
Rgesvdx.cpp \
Rgesvj.cpp \
Rgesvx.cpp \
Rgetc2.cpp \
Rgetf2.cpp \
Rgetrf.cpp \
Rgetrf2.cpp \
Rgetri.cpp \
Rgetrs.cpp \
Rgetsls.cpp \
Rgetsqrhrt.cpp \
Rggbak.cpp \
Rggbal.cpp \
Rgges.cpp \
Rgges3.cpp \
Rggesx.cpp \
Rggev.cpp \
Rggev3.cpp \
Rggevx.cpp \
Rggglm.cpp \
Rgghd3.cpp \
Rgghrd.cpp \
Rgglse.cpp \
Rggqrf.cpp \
Rggrqf.cpp \
Rggsvd3.cpp \
Rggsvp3.cpp \
Rgsvj0.cpp \
Rgsvj1.cpp \
Rgtcon.cpp \
Rgtrfs.cpp \
Rgtsv.cpp \
Rgttrf.cpp \
Rgttrs.cpp \
Rgtts2.cpp \
Rhgeqz.cpp \
Rhsein.cpp \
Rhseqr.cpp \
Risnan.cpp \
Rlabad.cpp \
Rlabrd.cpp \
Rlacn2.cpp \
Rlacon.cpp \
Rlacpy.cpp \
Rladiv.cpp \
Rlae2.cpp \
Rlaebz.cpp \
Rlaed0.cpp \
Rlaed1.cpp \
Rlaed2.cpp \
Rlaed3.cpp \
Rlaed4.cpp \
Rlaed5.cpp \
Rlaed6.cpp \
Rlaed7.cpp \
Rlaed8.cpp \
Rlaed9.cpp \
Rlaeda.cpp \
Rlaein.cpp \
Rlaev2.cpp \
Rlaexc.cpp \
Rlag2.cpp \
Rlags2.cpp \
Rlagtf.cpp \
Rlagtm.cpp \
Rlagts.cpp \
Rlagv2.cpp \
Rlahqr.cpp \
Rlahr2.cpp \
Rlaic1.cpp \
Rlaisnan.cpp \
Rlaln2.cpp \
Rlals0.cpp \
Rlalsa.cpp \
Rlalsd.cpp \
Rlamch.cpp \
Rlamrg.cpp \
Rlamswlq.cpp \
Rlamtsqr.cpp \
Rlaneg.cpp \
Rlangb.cpp \
Rlange.cpp \
Rlangt.cpp \
Rlanhs.cpp \
Rlansb.cpp \
Rlansf.cpp \
Rlansp.cpp \
Rlanst.cpp \
Rlansy.cpp \
Rlantb.cpp \
Rlantp.cpp \
Rlantr.cpp \
Rlanv2.cpp \
Rlaorhr_col_getrfnp.cpp \
Rlaorhr_col_getrfnp2.cpp \
Rlapll.cpp \
Rlapmr.cpp \
Rlapmt.cpp \
Rlapy2.cpp \
Rlapy3.cpp \
Rlaqgb.cpp \
Rlaqge.cpp \
Rlaqp2.cpp \
Rlaqps.cpp \
Rlaqr0.cpp \
Rlaqr1.cpp \
Rlaqr2.cpp \
Rlaqr3.cpp \
Rlaqr4.cpp \
Rlaqr5.cpp \
Rlaqsb.cpp \
Rlaqsp.cpp \
Rlaqsy.cpp \
Rlaqtr.cpp \
Rlar1v.cpp \
Rlar2v.cpp \
Rlarf.cpp \
Rlarfb.cpp \
Rlarfb_gett.cpp \
Rlarfg.cpp \
Rlarfgp.cpp \
Rlarft.cpp \
Rlarfx.cpp \
Rlarfy.cpp \
Rlargv.cpp \
Rlarnv.cpp \
Rlarra.cpp \
Rlarrb.cpp \
Rlarrc.cpp \
Rlarrd.cpp \
Rlarre.cpp \
Rlarrf.cpp \
Rlarrj.cpp \
Rlarrk.cpp \
Rlarrr.cpp \
Rlarrv.cpp \
Rlarscl2.cpp \
Rlartg.cpp \
Rlartgp.cpp \
Rlartgs.cpp \
Rlartv.cpp \
Rlaruv.cpp \
Rlarz.cpp \
Rlarzb.cpp \
Rlarzt.cpp \
Rlas2.cpp \
Rlascl.cpp \
Rlascl2.cpp \
Rlasd0.cpp \
Rlasd1.cpp \
Rlasd2.cpp \
Rlasd3.cpp \
Rlasd4.cpp \
Rlasd5.cpp \
Rlasd6.cpp \
Rlasd7.cpp \
Rlasd8.cpp \
Rlasda.cpp \
Rlasdq.cpp \
Rlasdt.cpp \
Rlaset.cpp \
Rlasq1.cpp \
Rlasq2.cpp \
Rlasq3.cpp \
Rlasq4.cpp \
Rlasq5.cpp \
Rlasq6.cpp \
Rlasr.cpp \
Rlasrt.cpp \
Rlassq.cpp \
Rlasv2.cpp \
Rlaswlq.cpp \
Rlaswp.cpp \
Rlasy2.cpp \
Rlasyf.cpp \
Rlasyf_aa.cpp \
Rlasyf_rk.cpp \
Rlasyf_rook.cpp \
Rlatbs.cpp \
Rlatdf.cpp \
Rlatps.cpp \
Rlatrd.cpp \
Rlatrs.cpp \
Rlatrz.cpp \
Rlatsqr.cpp \
Rlauu2.cpp \
Rlauum.cpp \
Ropgtr.cpp \
Ropmtr.cpp \
Rorbdb.cpp \
Rorbdb1.cpp \
Rorbdb2.cpp \
Rorbdb3.cpp \
Rorbdb4.cpp \
Rorbdb5.cpp \
Rorbdb6.cpp \
Rorcsd.cpp \
Rorcsd2by1.cpp \
Rorg2l.cpp \
Rorg2r.cpp \
Rorgbr.cpp \
Rorghr.cpp \
Rorgl2.cpp \
Rorglq.cpp \
Rorgql.cpp \
Rorgqr.cpp \
Rorgr2.cpp \
Rorgrq.cpp \
Rorgtr.cpp \
Rorgtsqr.cpp \
Rorgtsqr_row.cpp \
Rorhr_col.cpp \
Rorm22.cpp \
Rorm2l.cpp \
Rorm2r.cpp \
Rormbr.cpp \
Rormhr.cpp \
Rorml2.cpp \
Rormlq.cpp \
Rormql.cpp \
Rormqr.cpp \
Rormr2.cpp \
Rormr3.cpp \
Rormrq.cpp \
Rormrz.cpp \
Rormtr.cpp \
Rpbcon.cpp \
Rpbequ.cpp \
Rpbrfs.cpp \
Rpbstf.cpp \
Rpbsv.cpp \
Rpbsvx.cpp \
Rpbtf2.cpp \
Rpbtrf.cpp \
Rpbtrs.cpp \
Rpftrf.cpp \
Rpftri.cpp \
Rpftrs.cpp \
Rpocon.cpp \
Rpoequ.cpp \
Rpoequb.cpp \
Rporfs.cpp \
Rposv.cpp \
Rposvx.cpp \
Rpotf2.cpp \
Rpotrf.cpp \
Rpotrf2.cpp \
Rpotri.cpp \
Rpotrs.cpp \
Rppcon.cpp \
Rppequ.cpp \
Rpprfs.cpp \
Rppsv.cpp \
Rppsvx.cpp \
Rpptrf.cpp \
Rpptri.cpp \
Rpptrs.cpp \
Rpstf2.cpp \
Rpstrf.cpp \
Rptcon.cpp \
Rpteqr.cpp \
Rptrfs.cpp \
Rptsv.cpp \
Rptsvx.cpp \
Rpttrf.cpp \
Rpttrs.cpp \
Rptts2.cpp \
Rrscl.cpp \
Rsb2st_kernels.cpp \
Rsbev.cpp \
Rsbev_2stage.cpp \
Rsbevd.cpp \
Rsbevd_2stage.cpp \
Rsbevx.cpp \
Rsbevx_2stage.cpp \
Rsbgst.cpp \
Rsbgv.cpp \
Rsbgvx.cpp \
Rsbtrd.cpp \
Rsfrk.cpp \
Rspcon.cpp \
Rspev.cpp \
Rspevd.cpp \
Rspevx.cpp \
Rspgst.cpp \
Rspgvd.cpp \
Rsprfs.cpp \
Rspsv.cpp \
Rspsvx.cpp \
Rsptrd.cpp \
Rsptrf.cpp \
Rsptri.cpp \
Rsptrs.cpp \
Rstebz.cpp \
Rstedc.cpp \
Rstein.cpp \
Rstemr.cpp \
Rsteqr.cpp \
Rsterf.cpp \
Rstev.cpp \
Rstevd.cpp \
Rstevr.cpp \
Rstevx.cpp \
Rsycon.cpp \
Rsycon_3.cpp \
Rsyconv.cpp \
Rsyconvf.cpp \
Rsyconvf_rook.cpp \
Rsyequb.cpp \
Rsyev.cpp \
Rsyev_2stage.cpp \
Rsyevd.cpp \
Rsyevd_2stage.cpp \
Rsyevr.cpp \
Rsyevr_2stage.cpp \
Rsyevx.cpp \
Rsyevx_2stage.cpp \
Rsygs2.cpp \
Rsygst.cpp \
Rsygv_2stage.cpp \
Rsygvd.cpp \
Rsygvx.cpp \
Rsyrfs.cpp \
Rsysv.cpp \
Rsysv_aa.cpp \
Rsysv_aa_2stage.cpp \
Rsysv_rk.cpp \
Rsysv_rook.cpp \
Rsysvx.cpp \
Rsyswapr.cpp \
Rsytd2.cpp \
Rsytf2.cpp \
Rsytf2_rk.cpp \
Rsytf2_rook.cpp \
Rsytrd.cpp \
Rsytrd_2stage.cpp \
Rsytrd_sb2st.cpp \
Rsytrd_sy2sb.cpp \
Rsytrf.cpp \
Rsytrf_aa.cpp \
Rsytrf_aa_2stage.cpp \
Rsytrf_rk.cpp \
Rsytrf_rook.cpp \
Rsytri.cpp \
Rsytri2.cpp \
Rsytri2x.cpp \
Rsytri_3.cpp \
Rsytri_3x.cpp \
Rsytri_rook.cpp \
Rsytrs.cpp \
Rsytrs2.cpp \
Rsytrs_3.cpp \
Rsytrs_aa.cpp \
Rsytrs_aa_2stage.cpp \
Rsytrs_rook.cpp \
Rtbcon.cpp \
Rtbrfs.cpp \
Rtbtrs.cpp \
Rtfsm.cpp \
Rtftri.cpp \
Rtfttp.cpp \
Rtfttr.cpp \
Rtgevc.cpp \
Rtgex2.cpp \
Rtgexc.cpp \
Rtgsen.cpp \
Rtgsja.cpp \
Rtgsna.cpp \
Rtgsy2.cpp \
Rtgsyl.cpp \
Rtpcon.cpp \
Rtplqt.cpp \
Rtplqt2.cpp \
Rtpmlqt.cpp \
Rtpmqrt.cpp \
Rtpqrt.cpp \
Rtpqrt2.cpp \
Rtprfb.cpp \
Rtprfs.cpp \
Rtptri.cpp \
Rtptrs.cpp \
Rtpttf.cpp \
Rtpttr.cpp \
Rtrcon.cpp \
Rtrevc.cpp \
Rtrevc3.cpp \
Rtrexc.cpp \
Rtrrfs.cpp \
Rtrsen.cpp \
Rtrsna.cpp \
Rtrsyl.cpp \
Rtrti2.cpp \
Rtrtri.cpp \
Rtrtrs.cpp \
Rtrttf.cpp \
Rtrttp.cpp \
Rtzrzf.cpp \
iCmax1.cpp \
iMieeeck.cpp \
iMladiag.cpp \
iMladlc.cpp \
iMladlr.cpp \
iMlaenv.cpp \
iMlaenv2stage.cpp \
iMlaprec.cpp \
iMlatrans.cpp \
iMlauplo.cpp \
iMlaver.cpp \
iMlazlc.cpp \
iMlazlr.cpp \
iMparmq.cpp \
iMparam2stage.cpp
